Add Set ABI to Proxy sources

--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -17,6 +17,8 @@ dataSources:
       abis:
         - name: TokenSetProxyV1
           file: ./abis/TokenSetProxyV1.json
+        - name: Set
+          file: ./abis/Set.json
       eventHandlers:
         - event: LogRebalancingSetIssue(indexed address,indexed address,uint256)
           handler: handleSetIssue
@@ -55,6 +57,8 @@ dataSources:
       abis:
         - name: TokenSetProxyV2
           file: ./abis/TokenSetProxyV2.json
+        - name: Set
+          file: ./abis/Set.json
       eventHandlers:
         - event: LogPayableExchangeIssue(indexed address,indexed address,address,uint256,uint256)
           handler: handleSetIssue
