Include SetCore contract

--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -39,6 +39,8 @@ dataSources:
           abis:
             - name: Set
               file: ./abis/Set.json
+            - name: SetCore
+              file: ./abis/SetCore.json
           eventHandlers:
             - event: Transfer(indexed address,indexed address,uint256)
               handler: handleTransfer
@@ -79,6 +81,27 @@ dataSources:
           abis:
             - name: Set
               file: ./abis/Set.json
+            - name: SetCore
+              file: ./abis/SetCore.json
           eventHandlers:
             - event: Transfer(indexed address,indexed address,uint256)
               handler: handleTransfer
+  - kind: ethereum/contract
+    name: SetCore
+    network: mainnet
+    source:
+      address: "0xf55186CC537E7067EA616F2aaE007b4427a120C8"
+      abi: SetCore
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.3
+      language: wasm/assemblyscript
+      entities:
+        - Set
+      abis:
+        - name: SetCore
+          file: ./abis/SetCore.json
+      eventHandlers:
+        - event: SetTokenCreated(indexed address,address,address[],uint256[],uint256,bytes32,bytes32)
+          handler: handleSetCreated
+      file: ./src/core.ts
