--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -84,3 +84,5 @@ dataSources:
           eventHandlers:
             - event: Transfer(indexed address,indexed address,uint256)
               handler: handleTransfer
+            - event: RebalanceStarted(address,address)
+              handler: handleRebalance
