--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "token-sets",
+  "name": "tokensets-subgraph",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ destiner/token-sets",
-    "create-local": "graph create --node http://localhost:8020/ destiner/token-sets",
-    "remove-local": "graph remove --node http://localhost:8020/ destiner/token-sets",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 destiner/token-sets"
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ destiner/token-sets"
   },
-  "dependencies": {
-    "@graphprotocol/graph-cli": "0.14.0",
-    "@graphprotocol/graph-ts": "0.13.0"
+  "devDependencies": {
+    "@graphprotocol/graph-cli": "^0.16.0",
+    "@graphprotocol/graph-ts": "^0.16.0"
   }
 }
