--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -22,6 +22,9 @@ templates:
           handler: handleTransfer
         - event: RebalanceStarted(address,address)
           handler: handleRebalanceStart
+      callHandlers:
+        - function: settleRebalance()
+          handler: handleRebalanceSettle
 dataSources:
   - kind: ethereum/contract
     name: SetCore
