--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ destiner/token-sets"
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ graphitetools/tokensets"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.18.0",
