--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "tokensets-subgraph",
-  "license": "UNLICENSED",
+  "version": "1.0.0",
+  "description": "TokenSets Subgraph",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/GraphiteTools/tokensets-subgraph.git"
+  },
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
